Changed background rotator opacity to 0.4 with a black background, solving the unreadable text on some backgrounds. Fixes #22

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ ng\:form {
 }
 
 body {
-  background-color: #BBB;
+  background-color: #000;
   background-size: cover;
   background-attachment: fixed;
   background-repeat:no-repeat;
@@ -88,6 +88,7 @@ background-rotator, background-rotator > div {
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -1;
+  opacity: 0.4;
 }
 
 #actionbar {
